# 5_laser_camera_sim

./: CMakeLists.txt  README.md
data/: cloud10.pcd  cloud3.pcd  cloud4.pcd  cloud5.pcd  cloud6.pcd  cloud7.pcd  cloud8.pcd  cloud9.pcd  position10.txt  position11.txt  position12.txt  position13.txt  position14.txt  position15.txt  position16.txt  position17.txt  position18.txt  position2.txt  position3.txt  position4.txt  position5.txt  position6.txt  position7.txt  position8.txt  position9.txt
src/: color.cpp  color2.cpp~
